<resources>
    <string name="app_name">Mieszkanie</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="haslo">hasło</string>
    <string name="login">login</string>
    <string name="grafika">grafika</string>
    <string name="nie_masz_konta">Nie masz jeszcze konta? </string>
    <string name="zarejestruj_sie">Zarejestruj się!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="powtorz_haslo">powtórz haslo</string>
    <string name="adres_email">adres e-mail</string>
    <string name="akceptuje">Akceptuję</string>
    <string name="regulamin">regulamin</string>
    <string name="ikona_powrotu">ikona powrotu</string>
    <string name="nie_jestes_czescia_m">Wygląda na to, że jeszcze nie jesteś częścią żadnego Mieszkania. Możesz to zmienić wpisując nazwę:</string>
    <string name="nazwa_mieszkania">nazwa</string>
    <string name="dolacz">Dołącz</string>
    <string name="lub">lub</string>
    <string name="utw_nowe_mieszkanie">Utwórz nowe Mieszkanie</string>
    <string name="twoj_kod">Twój kod do mieszkania to:  </string>
    <string name="dzisiaj">Dzisiaj, </string>
    <string name="menu">menu</string>
    <string name="message">message</string>
    <string name="moje_mieszkanie">Moje mieszkanie</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="profile_picture">profile picture</string>
    <string name="obowiazki">Obowiązki</string>
    <string name="edytuj">edytuj</string>
    <string name="usun">usuń</string>
    <string name="dodaj_obowiazek">add chore</string>
    <string name="nazwa_obowiazku">nazwa obowiązku</string>
    <string name="zmiana">zmiana</string>
    <string name="na">na</string>
    <string name="osoba">osoba</string>
    <string name="nowy_obowiazek">Nowy obowiązek</string>
    <string name="dodaj_osobe">dodaj osobę</string>
    <string name="zapisz_zmiany">Zapisz zmiany</string>
    <string name="edycja_obowiazku">Edycja obowiązku</string>
    <string name="zapisz">Zapisz</string>
    <string name="wydarzenia">Wydarzenia</string>
    <string name="dodaj_wydarzenie">Dodaj wydarzenie</string>
    <string name="urodziny">Urodziny Krzyśka</string>
    <string name="start">Start:" " </string>
    <string name="koniec">Koniec:" " </string>
    <string name="liczba_os">Liczba osób:" " </string>
    <string name="widok_kalendarza">widok kalendarza</string>
    <string name="nowe_wydarzenie">Nowe wydarzenie</string>
    <string name="nazwa">nazwa</string>
    <string name="opis">opis</string>
    <string name="liczba_osob">liczba osób</string>
    <string name="lista_rozwijana">lista rozwijana</string>
    <string name="wyslij_zaproszenie">Wyślij zaproszenie</string>
    <string name="podaj_adres_osoby">Podaj adres mailowy osoby, którą chcesz zaprosić do mieszkania:</string>
    <string name="ilosc">ilość</string>
    <string name="dodaj_produkt">Dodaj produkt</string>
    <string name="widok_listy">widok listy</string>
    <string name="data">\"Data:  \"</string>
    <string name="wydarzenie">Wydarzenie</string>
    <string name="obowiazek">Obowiązek</string>
    <string name="opis_">Opis:</string>
    <string name="liczba_czlonkow">Liczba członków: " "</string>
    <string name="kod_mieszkania">Kod mieszkania: " "</string>
    <string name="opusc_mieszkanie">Opuść mieszkanie na stałe</string>
    <string name="wyjdz_z_mieszkania">Wyjdź z mieszkania</string>

</resources>
