<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".StartWithoutFlat">

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:contentDescription="@string/wyloguj"
        android:scaleX="-1"
        android:src="@drawable/ic_logout" />

    <TextView
        android:layout_width="265dp"
        android:layout_height="95dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/nie_jestes_czescia_m"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="125dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/flatName"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:background="@drawable/input"
            android:hint="@string/nazwa_mieszkania"
            android:inputType="text" />

        <Button
            android:id="@+id/joinButton"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginStart="-80dp"
            android:layout_marginLeft="-80dp"
            android:background="@drawable/half_rounded_button"
            android:text="@string/dolacz"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/lub"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />


    <Button
        android:id="@+id/addFlatButton"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_button"
        android:text="@string/utw_nowe_mieszkanie"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/grafika"
        app:srcCompat="@drawable/party_pink" />

</LinearLayout>