<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">


    <AutoCompleteTextView
        android:id="@+id/username"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:hint="@string/login"
        android:inputType="text"
        android:selectAllOnFocus="true" />

    <AutoCompleteTextView
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input"
        android:hint="@string/haslo"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_button"
        android:enabled="true"
        android:text="@string/zaloguj"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-10dp"
        android:contentDescription="@string/grafika"
        app:srcCompat="@drawable/party_pink" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-35dp">

        <TextView
            android:layout_width="185dp"
            android:layout_height="27dp"
            android:text="@string/nie_masz_konta"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/registerNow"
            android:layout_width="118dp"
            android:layout_height="28dp"
            android:text="@string/zarejestruj_sie"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>