<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".my_flat">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/returnChores"
                android:layout_width="32dp"
                android:layout_height="25dp"
                android:background="@null"
                android:contentDescription="@string/ikona_powrotu"
                android:gravity="center_vertical"
                app:srcCompat="@drawable/back_icon" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-32dp"
                android:layout_marginLeft="-32dp"
                android:gravity="center"
                android:text="@string/moje_mieszkanie"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:text="@string/liczba_czlonkow" />


        <TextView
            android:id="@+id/numberOfMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:text="4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="-20dp"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:text="@string/kod_mieszkania" />


        <TextView
            android:id="@+id/flatCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:text="XYZ123" />

    </LinearLayout>


    <Button
        android:id="@+id/quitFlat"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:enabled="true"
        android:textAllCaps="false"
        android:text="@string/opusc_mieszkanie"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/leaveFlat"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:enabled="true"
        android:textAllCaps="false"
        android:text="@string/wyjdz_z_mieszkania"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/grafika"
        app:srcCompat="@drawable/party_pink" />

</LinearLayout>