<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/black_transparent">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"
        android:background="@drawable/popup_shape"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/podaj_adres_osoby" />

        <AutoCompleteTextView
            android:id="@+id/emailAddressForInvite"
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/input"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/adres_email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/sendEmail"
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:enabled="true"
            android:text="@string/wyslij_zaproszenie"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>