<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black_transparent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_shape"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <AutoCompleteTextView
            android:id="@+id/productName"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:background="@drawable/input"
            android:hint="@string/nazwa"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark" />

        <AutoCompleteTextView
            android:id="@+id/numOfItems"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/input"
            android:hint="@string/ilosc"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark" />

        <Spinner
            android:id="@+id/unit"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input"
            android:popupBackground="@drawable/dropdown_background"
            android:spinnerMode="dropdown"
            tools:listitem="@layout/drop_down_item" />

        <Button
            android:id="@+id/addProduct"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_button"
            android:enabled="true"
            android:text="@string/dodaj_produkt"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>